[project]
name = "automated-review-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-oauthlib>=1.2.2",
    "groq>=0.36.0",
    "gspread>=6.2.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "python-decouple>=3.8",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
where = ["./"]
include = ["src"]
